GITForce/src/objects/DemoInsert__c.object
<CustomObject>
    <fields>
        <fullName>DemoDepartment__c</fullName>
        <label>DemoDepartment</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoName__c</fullName>
        <label>DemoName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DemoPassword__c</fullName>
        <label>DemoPassword</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <label>DemoInsert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DemoName__c</columns>
        <columns>Email__c</columns>
        <columns>DemoPassword__c</columns>
        <columns>DemoDepartment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DemoInsertRecordName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DemoInserts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>